# sfsu-fft

./: CMakeLists.txt  README.md  data_generator  data_generator.cpp  denoiser.py  fft_endpoint  fft_endpoint.cpp  fftw_mpi_example.cpp  imshow.py  mpi_example.cpp  notes.txt
CMake/: options.cmake
data/: labels_12x12_10-50n_5r.bov  noisy_12x12_10-50n_5r.bov  pure_12x12_10-50n_5r.bov
sensei/: CMakeLists.txt  ConfigurableAnalysis.cxx  Fft.cxx  Fft.h
sensei/testing/: CMakeLists.txt  fftPythonEndpoint.py  fftPythonXML.xml  testFft.cpp
